<resources>
    <string name="app_name">Быстрое сравнение цен</string>
    <string name="Number">№</string>
    <string name="Price">Цена</string>
    <string name="quantity">Кол-во</string>
    <string name="unit">Ед. изм.</string>
    <string name="resalt">Цена за ед.</string>
    <string name="economy">Переплата </string>
    <string name="economyStr">Переплата %1$s руб на %4$s %5$s \t %2$s%3$s </string>
    <string name="resStr">%1$s %2$s </string>
    <string name="one">1</string>
    <string name="default_unit">ед</string>
    <string name="ButtonAdd">Добавить</string>
    <string name="DuttonClear">Очистить</string>
    <string name="quan_economy">Рассчитать переплату на:</string>
    <string name="delete"> Удалить </string>
    <string name="percent"> % </string>
    <string name="economy_percent"> , </string>
    <string name="best_result">Лучшая цена</string>
    <string name="rub">р</string>
    <string name="thread_name">РАСЧЕТ</string>
    <string name="around_0">около нуля</string>


</resources>
