<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ru.forge.twice_a_day.quickcomparison.MainActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/row1">

        <TextView
            android:layout_width="20dp"
            android:layout_height="60dp"
            android:text="@string/Number"
            android:id="@+id/tn"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:text="@string/Price"
            android:id="@+id/tpr"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:text="@string/quantity"
            android:id="@+id/tq"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="18sp" />

        <TextView
            android:layout_width="45dp"
            android:layout_height="60dp"
            android:text="@string/unit"
            android:id="@+id/tu"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="18sp" />

        <TextView
            android:layout_width="55dp"
            android:layout_height="60dp"
            android:text="@string/quantityunit"
            android:id="@+id/tqu"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="18sp" />

        <TextView
            android:layout_width="40dp"
            android:layout_height="60dp"
            android:text="@string/percent"
            android:id="@+id/tper"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/row2"
        android:layout_below="@+id/row1">

        <TextView
            android:layout_width="20dp"
            android:layout_height="60dp"
            android:text="@string/one"
            android:id="@+id/n1"
            android:textSize="20sp"
            android:gravity="center" />

        <EditText
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/pr1"
            android:gravity="center"
            android:textSize="20sp" />

        <EditText
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/q1"
            android:gravity="center"
            android:textSize="20sp" />

        <Spinner
            android:layout_width="45dp"
            android:layout_height="60dp"
            android:id="@+id/u1"
            android:gravity="center" />

        <TextView
            android:layout_width="55dp"
            android:layout_height="60dp"
            android:id="@+id/qu1"
            android:gravity="center"
            android:textSize="20sp" />

        <TextView
            android:layout_width="40dp"
            android:layout_height="60dp"
            android:id="@+id/per1"
            android:gravity="center"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>
